--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "pg_migrator",
   "version": "1.0.0",
-  "description": "node base script for migrate msql db to psql db for vero vault",
+  "description": "node base script for migrate msql db to psql db",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "data:export": "ts-node ./src/data_extractor.ts",
     "schema:mysql": "ts-node ./src/schema_descriptor.ts",
-    "data:import": "ts-node ./src/data_importer.ts"
+    "data:import": "ts-node ./src/data_importer.ts",
+    "data:bridge": "ts-node ./src/pgsql_pipeline.ts"
   },
   "dependencies": {
     "@fast-csv/format": "^5.0.0",
@@ -24,7 +25,9 @@
     "p-limit": "3",
     "pg": "^8.13.0",
     "pg-copy-streams": "^6.0.6",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20",
     "typescript": "^5.6.3",
     "winston": "^3.15.0"
   },
